# alphabetize-codeowners

./: .flake8  .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  alphabetize_codeowners.py  pyproject.toml
tests/: test_sorting.py
